[tool.poetry]
name = "back-end-python"
version = "0.1.0"
description = ""
authors = ["Will Dantas <dantaswilliam@gmail>"]
readme = "README.md"
packages = [{include = "back_end_python"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.7"
pytest = "^7.4.0"
alembic = "^1.11.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
